# particle-experiments

./: CMakeLists.txt
gpu_newton/: CMakeLists.txt  main.cpp
gpu_newton/include/: main.hpp
shaders/: Makefile  README.md  dot.comp  dot.frag  dot.vert
simple_newton/: CMakeLists.txt  README.md  main.cpp
simple_newton/include/: main.hpp
